# Mini_Task_Manager

./: .gitignore  CMakeLists.txt  README.md
include/: Date.h  Task.h  TaskManager.h
src/: Date.cpp  Task.cpp  TaskManager.cpp  main.cpp
